--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,16 @@ collections:
   uploads:
     title: Uploads
     output: true
+plugins:
+- jekyll-feed
+exclude:
+  - .sass-cache/
+  - .jekyll-cache/
+  - gemfiles/
+  - Gemfile
+  - Gemfile.lock
+  - node_modules/
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
